# _project_TOBD

./: Dockerfile  Dockerfile.etl  Dockerfile.prefect  Dockerfile.streamlit  README.md  TOBD контрольная работа_26.12.2025.docx  docker-compose.yml  pyproject.toml  task
dashboard/: app.py
data/: TOBD контрольная работа.docx  Презентация ТОБД_26.12.2025.pptx
flows/: etl_flow.py
task/: Проектная_работа_Dask_Prefect.docx
