[project]
name = "tobd-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[dataframe]>=2025.12.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "perfect>=0.0.1",
    "plotly>=6.5.0",
    "prefect-dask>=0.3.6",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
]
